data/derived/comb/progs/unify/prog6307.ml.out
Characters 17-20:
  let _ = sumList ['a'];;
                   ^^^
Error: This expression has type char but an expression was expected of type
         int
